--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -2,32 +2,32 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: nginx-demo
+  name: nginx-demo-<%= ENV['ENVIRONMENT'] %>
 ---
 apiVersion: habitat.sh/v1beta1
 kind: Habitat
 metadata:
-  name: nginx-demo-dev
+  name: nginx-demo-<%= ENV['ENVIRONMENT'] %>
   namespace: nginx-demo
   labels:
-    app: nginx-demo
+    app: nginx-demo-<%= ENV['ENVIRONMENT'] %>
 customVersion: v1beta2
 spec:
   v1beta2:
-    image: jtimberman/nginx-demo:latest
+    image: chefops/nginx-demo:<%= ENV['IMAGE_TAG'] %>
     count: 2
     service:
-      name: nginx-demo
+      name: nginx-demo-<%= ENV['ENVIRONMENT'] %>
       topology: standalone
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-demo
+  name: nginx-demo-<%= ENV['ENVIRONMENT'] %>
   namespace: nginx-demo
 spec:
   selector:
-    habitat-name: nginx-demo-dev
+    habitat-name: nginx-demo-<%= ENV['ENVIRONMENT'] %>
   ports:
   - name: http
     port: 80
