use acceptance, rather than latest
We won't have a latest tag because the hab export done by expeditor
uses `--no-tag-latest`. It will default to the acceptance channel,
however, based on the list of channels in the expeditor configuration.

Signed-off-by: Joshua Timberman <joshua@chef.io>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -30,7 +30,7 @@ pipelines:
         - APP: nginx-demo
 
 subscriptions:
-  - workload: docker_image_published:chefops/nginx-demo:latest
+  - workload: docker_image_published:chefops/nginx-demo:acceptance
     actions:
       - trigger_pipeline:deploy/acceptance
 
